log
Wed 22 Mar 2023 02:40:09 PM UTC: 
 tests:  0|6
total_score: 0/70
00259d1
Wed 22 Mar 2023 02:46:11 PM UTC: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
5e5a8d5
Wed 22 Mar 2023 02:50:22 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
31e3e7b
Wed 22 Mar 2023 02:50:38 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
426b71b
Wed 22 Mar 2023 02:50:59 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:46:12: error: expected expression before ‘List’
   46 |     return List->head->data;
      |            ^~~~
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
56c3e21
Wed 22 Mar 2023 02:51:49 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d54a0a0
Wed 22 Mar 2023 02:52:59 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
086f817
Wed 22 Mar 2023 02:54:51 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
4bc441b
Wed 22 Mar 2023 02:56:01 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a7a7019
Wed 22 Mar 2023 02:56:36 PM UTC: 
 list.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
8b324f9
Wed 22 Mar 2023 02:57:20 PM UTC: 
 list.c | 11 ++---------
 1 file changed, 2 insertions(+), 9 deletions(-)
 tests:  0|0
63505c1
Wed 22 Mar 2023 03:01:50 PM UTC: 
 list.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  0|0
8809235
Wed 22 Mar 2023 03:02:06 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
6740a34
Wed 22 Mar 2023 03:04:14 PM UTC: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
86eddcb
Wed 22 Mar 2023 03:04:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
6370afb
Thu 23 Mar 2023 08:37:48 PM UTC: 
 list.c | 14 ++++----------
 1 file changed, 4 insertions(+), 10 deletions(-)
 tests:  0|0
ab5a289
Thu 23 Mar 2023 08:41:03 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d623e32
Thu 23 Mar 2023 08:44:30 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
e7d8ad1
Thu 23 Mar 2023 08:44:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
2a05163
Thu 23 Mar 2023 08:45:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d5871cd
Thu 23 Mar 2023 08:47:35 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
d73bcc5
Thu 23 Mar 2023 08:49:03 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1acf302
Thu 23 Mar 2023 08:50:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
6cd8e70
Thu 23 Mar 2023 08:52:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
8a9d469
Thu 23 Mar 2023 09:01:29 PM UTC: 
 list.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  6|4
total_score: 25/70
6e2aa84
Thu 23 Mar 2023 09:06:33 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:73:1: error: control reaches end of non-void function [-Werror=return-type]
   73 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5c9e53c
Thu 23 Mar 2023 09:08:41 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:73:1: error: control reaches end of non-void function [-Werror=return-type]
   73 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
af7b0b4
Thu 23 Mar 2023 09:11:55 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  9|3
total_score: 35/70
6d67e7a
Fri 24 Mar 2023 05:27:35 PM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|0
a603b02
Fri 24 Mar 2023 05:28:26 PM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  10|2
total_score: 45/70
83035bb
Fri 24 Mar 2023 05:39:23 PM UTC: 
 list.c | 21 ++++++++++++---------
 1 file changed, 12 insertions(+), 9 deletions(-)
 tests:  10|2
total_score: 45/70
c0321b3
Fri 24 Mar 2023 05:43:59 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
ebcea93
Fri 24 Mar 2023 06:03:17 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  10|2
total_score: 45/70
23e6aa9
Fri 24 Mar 2023 06:07:28 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  10|2
total_score: 45/70
ebe96e4
Fri 24 Mar 2023 06:07:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
4458197
Fri 24 Mar 2023 06:12:13 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
6c8c747
Fri 24 Mar 2023 06:12:41 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
abf9af4
Fri 24 Mar 2023 06:14:09 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
bbd9d48
Fri 24 Mar 2023 06:14:24 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
8c57109
Fri 24 Mar 2023 06:15:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
bf31d0c
Fri 24 Mar 2023 06:21:06 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
238aa74
Fri 24 Mar 2023 06:23:01 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
7add67c
Fri 24 Mar 2023 06:23:35 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
c7c3aa4
Fri 24 Mar 2023 06:27:44 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
4a64a58
Fri 24 Mar 2023 06:30:03 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
4b97ef1
Sat 25 Mar 2023 03:54:21 PM UTC: 
 list.c | 52 +++++++++++++++++++++++++++++++++++++---------------
 1 file changed, 37 insertions(+), 15 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:139:8: error: unused variable ‘data’ [-Werror=unused-variable]
  139 |  void *data = nodeEliminado->data;
      |        ^~~~
list.c:159:1: error: control reaches end of non-void function [-Werror=return-type]
  159 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
be9c65d
Sat 25 Mar 2023 03:56:16 PM UTC: 
 list.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  12|0
total_score: 70/70
0a08f9b
Sat 25 Mar 2023 03:56:47 PM UTC: 
 list.c | 9 ---------
 1 file changed, 9 deletions(-)
 tests:  11|1
total_score: 55/70
ff639cd
Sat 25 Mar 2023 04:10:39 PM UTC: 
 list.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  12|0
total_score: 70/70
c8ff784
Sat 25 Mar 2023 04:10:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
aa2fa78
Sat 25 Mar 2023 04:11:02 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  12|0
total_score: 70/70
83c4b23
Sat 25 Mar 2023 04:16:34 PM UTC: 
 list.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  11|1
total_score: 55/70
dbecfa2
Sat 25 Mar 2023 04:17:08 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  11|1
total_score: 55/70
76132c8
Sat 25 Mar 2023 04:21:43 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
742ad5c
Sat 25 Mar 2023 04:21:57 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
d9a59af
Sat 25 Mar 2023 04:22:21 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
b7ff921
